@@ -1,10 +1,12 @@
 #!/usr/bin/env perl -w
 use strict;
-use Test::More tests => 1;
-
+use Test::More;
 use Net::Redmine;
 
 require 't/net_redmine_test.pl';
+
+plan tests => 1;
+
 my $r = new_net_redmine();
 
 ### Prepare new tickets
@@ -16,4 +18,10 @@ diag "Created 1 ticket, id = $id\n";
 $ticket->destroy;
 
 my $t2 = Net::Redmine::Ticket->new(connection => $r->connection);
-ok(!$t2->load($id), "cannot load it once the ticket is deleted.");
+
+if ($t2->load($id)) {
+    fail "Faeild to deleted the ticket"
+}
+else {
+    pass "cannot load it once the ticket is destroyed.";
+}
